After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 595554 - Crash when login in (by HTTP Basic Auth)
Crash when login in (by HTTP Basic Auth)
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: HTTP Transport
unspecified
Other Linux
: Normal blocker
: GNOME 2.28
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2009-09-18 07:54 UTC by Maciej (Matthew) Piechotka
Modified: 2009-12-16 09:59 UTC
See Also:
GNOME target: ---
GNOME version: 2.27/2.28



Description Maciej (Matthew) Piechotka 2009-09-18 07:54:28 UTC
Althought crash was in epiphany I belive it is gtk+ or gtk-engines problem.
Reproducable: As far - twice (100%)

  • #0 ge_gdk_color_to_cairo
    at ./cairo-support.c line 164
  • #1 clearlooks_get_parent_bg
    at ./src/support.c line 107
  • #2 clearlooks_style_draw_box
    at ./src/clearlooks_style.c line 1057
  • #3 IA__gtk_paint_box
    at gtkstyle.c line 6090
  • #4 gtk_toolbar_expose
    at gtktoolbar.c line 886
  • #5 _gtk_marshal_BOOLEAN__BOXED
    at gtkmarshalers.c line 84
  • #6 g_type_class_meta_marshal
    at gclosure.c line 878
  • #7 g_closure_invoke
    at gclosure.c line 767
  • #8 signal_emit_unlocked_R
    at gsignal.c line 3285
  • #9 g_signal_emit_valist
    at gsignal.c line 2990
  • #10 g_signal_emit
    at gsignal.c line 3037
  • #11 gtk_widget_event_internal
    at gtkwidget.c line 4786
  • #12 IA__gtk_container_propagate_expose
    at gtkcontainer.c line 2731
  • #13 gtk_container_expose_child
    at gtkcontainer.c line 2619
  • #14 gtk_box_forall
    at gtkbox.c line 1259
  • #15 IA__gtk_container_forall
    at gtkcontainer.c line 1499
  • #16 gtk_container_expose
    at gtkcontainer.c line 2642
  • #17 _gtk_marshal_BOOLEAN__BOXED
    at gtkmarshalers.c line 84
  • #18 g_type_class_meta_marshal
    at gclosure.c line 878
  • #19 g_closure_invoke
    at gclosure.c line 767
  • #20 signal_emit_unlocked_R
    at gsignal.c line 3285
  • #21 g_signal_emit_valist
    at gsignal.c line 2990
  • #22 g_signal_emit
    at gsignal.c line 3037
  • #23 gtk_widget_event_internal
    at gtkwidget.c line 4786
  • #24 IA__gtk_container_propagate_expose
    at gtkcontainer.c line 2731
  • #25 gtk_container_expose_child
    at gtkcontainer.c line 2619
  • #26 gtk_box_forall
    at gtkbox.c line 1249
  • #27 IA__gtk_container_forall
    at gtkcontainer.c line 1499
  • #28 gtk_container_expose
    at gtkcontainer.c line 2642
  • #29 _gtk_marshal_BOOLEAN__BOXED
    at gtkmarshalers.c line 84
  • #30 g_type_class_meta_marshal
    at gclosure.c line 878
  • #31 g_closure_invoke
    at gclosure.c line 767
  • #32 signal_emit_unlocked_R
    at gsignal.c line 3285
  • #33 g_signal_emit_valist
    at gsignal.c line 2990
  • #34 g_signal_emit
    at gsignal.c line 3037
  • #35 gtk_widget_event_internal
    at gtkwidget.c line 4786
  • #36 IA__gtk_container_propagate_expose
    at gtkcontainer.c line 2731
  • #37 gtk_container_expose_child
    at gtkcontainer.c line 2619
  • #38 gtk_box_forall
    at gtkbox.c line 1259
  • #39 IA__gtk_container_forall
    at gtkcontainer.c line 1499
  • #40 gtk_container_expose
    at gtkcontainer.c line 2642
  • #41 _gtk_marshal_BOOLEAN__BOXED
    at gtkmarshalers.c line 84
  • #42 g_type_class_meta_marshal
    at gclosure.c line 878
  • #43 g_closure_invoke
    at gclosure.c line 767
  • #44 signal_emit_unlocked_R
    at gsignal.c line 3285
  • #45 g_signal_emit_valist
    at gsignal.c line 2990
  • #46 g_signal_emit
    at gsignal.c line 3037
  • #47 gtk_widget_event_internal
    at gtkwidget.c line 4786
  • #48 IA__gtk_container_propagate_expose
    at gtkcontainer.c line 2731
  • #49 gtk_container_expose_child
    at gtkcontainer.c line 2619
  • #50 gtk_box_forall
    at gtkbox.c line 1249
  • #51 IA__gtk_container_forall
    at gtkcontainer.c line 1499
  • #52 gtk_container_expose
    at gtkcontainer.c line 2642
  • #53 _gtk_marshal_BOOLEAN__BOXED
    at gtkmarshalers.c line 84
  • #54 g_type_class_meta_marshal
    at gclosure.c line 878
  • #55 g_closure_invoke
    at gclosure.c line 767
  • #56 signal_emit_unlocked_R
    at gsignal.c line 3285
  • #57 g_signal_emit_valist
    at gsignal.c line 2990
  • #58 g_signal_emit
    at gsignal.c line 3037
  • #59 gtk_widget_event_internal
    at gtkwidget.c line 4786
  • #60 IA__gtk_container_propagate_expose
    at gtkcontainer.c line 2731
  • #61 gtk_container_expose_child
    at gtkcontainer.c line 2619
  • #62 gtk_bin_forall
    at gtkbin.c line 128
  • #63 IA__gtk_container_forall
    at gtkcontainer.c line 1499
  • #64 gtk_container_expose
    at gtkcontainer.c line 2642
  • #65 gtk_window_expose
    at gtkwindow.c line 6579
  • #66 _gtk_marshal_BOOLEAN__BOXED
    at gtkmarshalers.c line 84
  • #67 g_type_class_meta_marshal
    at gclosure.c line 878
  • #68 g_closure_invoke
    at gclosure.c line 767
  • #69 signal_emit_unlocked_R
    at gsignal.c line 3285
  • #70 g_signal_emit_valist
    at gsignal.c line 2990
  • #71 g_signal_emit
    at gsignal.c line 3037
  • #72 gtk_widget_event_internal
    at gtkwidget.c line 4786
  • #73 IA__gtk_main_do_event
    at gtkmain.c line 1558
  • #74 _gdk_window_process_updates_recurse
    at gdkwindow.c line 4943
  • #75 _gdk_windowing_window_process_updates_recurse
    at gdkwindow-x11.c line 5541
  • #76 gdk_window_process_updates_internal
    at gdkwindow.c line 5098
  • #77 IA__gdk_window_process_all_updates
    at gdkwindow.c line 5197
  • #78 gdk_window_update_idle
    at gdkwindow.c line 4836
  • #79 gdk_threads_dispatch
    at gdk.c line 506
  • #80 g_idle_dispatch
    at gmain.c line 4065
  • #81 g_main_context_dispatch
    at gmain.c line 1960
  • #82 g_main_context_iterate
    at gmain.c line 2591
  • #83 g_main_loop_run
    at gmain.c line 2799
  • #84 IA__gtk_main
    at gtkmain.c line 1205
  • #85 main
    at ephy-main.c line 782

Comment 1 Benjamin Berg 2009-09-21 21:16:59 UTC
Hm, this does not make much sense to me. It would mean that the style of the window widget (at least a parent widget) is not set, or is pointing somewhere wrong.

And well, as far as I can tell, that cannot happen as GTK+ widgets always have some style set (and if it is a simple default one). Alternatively one of the parent widgets has already been destroyed or something like that, which seems rather unlikely to me too.

Hm, maybe there is some threading issue?
Comment 2 Gustavo Noronha (kov) 2009-09-21 21:40:58 UTC
This is a memory corruption problem caused by, apparently, soup - it only happens when you try to login using basic auth, and save the password to the keyring, right?
Comment 3 Maciej (Matthew) Piechotka 2009-09-21 21:47:21 UTC
(In reply to comment #2)
> This is a memory corruption problem caused by, apparently, soup - it only
> happens when you try to login using basic auth, and save the password to the
> keyring, right?

It seems so.
Comment 4 Benjamin Berg 2009-12-06 13:34:24 UTC
Reassigning to libsoup.
Comment 5 Dan Winship 2009-12-16 09:59:27 UTC
fixed in git, will go into 2.28.2. thanks