Fix memory corruption in SoupPasswordManagerGNOME

Debugged by Gustavo Noronha Silva,
https://bugzilla.gnome.org/show_bug.cgi?id=595554